TF 1.5, bazel 0.9.0, pytorch 0.4

--- a/lib_checks.ipynb
+++ b/lib_checks.ipynb
@@ -213,6 +213,52 @@
     "from google.protobuf.internal import api_implementation\n",
     "api_implementation._default_implementation_type"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-24T19:53:47.538605Z",
+     "start_time": "2018-01-24T19:53:43.028756Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-24T19:53:48.819148Z",
+     "start_time": "2018-01-24T19:53:48.729381Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.4.0a0+ed64001'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.__version__"
+   ]
   }
  ],
  "metadata": {
